--- a/src/components/TidyTree.css
+++ b/src/components/TidyTree.css
@@ -1,15 +1,17 @@
 /* TidyTree.css */
 
-.node-text {
+.nodes text {
     -webkit-transition: fill, font-size 0.5s;
     transition: fill, font-size 0.5s;
     font-size: 12px;
     background-color: #444;
     fill: #F4F4F4;
     text-shadow: 0 1px 4px black;
+    stroke-linejoin: round;
+    paint-order: stroke;
   }
   
-  .node-circle {
+  .nodes circle {
     fill: #F3F3FF; /* Circle fill color */
     stroke: #2593B8; /* Circle border color */
     stroke-width: 1.5px;
