--- a/src/components/TidyTree.css
+++ b/src/components/TidyTree.css
@@ -9,11 +9,22 @@
     text-shadow: 0 1px 4px black;
     stroke-linejoin: round;
     paint-order: stroke;
-  }
-  
-  .nodes circle {
+}
+
+.nodes circle {
     fill: #F3F3FF; /* Circle fill color */
     stroke: #2593B8; /* Circle border color */
     stroke-width: 1.5px;
+}
+
+circle.highlight{
+    fill: orange; /* Highlight color */
   }
+
+text.highlight{
+    font-weight:bold;
+    font-size: 14px;
+}
+  
+  
   
